--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class=" column col-right reveal">
                 <h2 class="content-title">Hey There! I'm Seema Hodade</h2>
-                <p class="paragraph-text">I'm a Front-End Developer in Latur, India.
+                <p class="paragraph-text">I'm a Front-End Developer.
                     I have serious passion for UI effects, animations and creating intuitive, dynamic user experiences.
                     <br><br>
                     I value simple content structure, clean design patterns, and thoughtful interactions.
